<resources>
    <string name="app_name">Navigation Teste</string>

    <string name="signup">Cadastro</string>
    <string name="home">Home</string>
    <string name="name">Nome</string>
    <string name="last_name">Sobrenome</string>
    <string name="age">Idade</string>
    <string name="address">Endereço</string>
    <string name="next">Continuar</string>
    <string name="neighborhood">Bairro</string>
    <string name="city">Cidade</string>
    <string name="state">UF</string>
    <string name="resumeName"><![CDATA[<b>Nome: </b>%s]]></string>
    <string name="resumeAge"><![CDATA[<b>Idade: </b>%s]]></string>
    <string name="resumeAddress"><![CDATA[<b>Endereço: </b>%s]]></string>
    <string name="resumeNeighborhood"><![CDATA[<b>Bairro: </b>%s]]></string>
    <string name="resumeCity"><![CDATA[<b>Cidade: </b>%s]]></string>
    <string name="resumeUf"><![CDATA[<b>Estado: </b>%s]]></string>
    <string name="finish">Finalizar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_screen">Proximo</string>
    <string name="viewpager_teste">ViewPager Teste</string>
    <string name="justTheFirstScreen">Apenas a primeira tela</string>
    <string name="second_screen">Segunda Tela</string>
    <string name="first_left">Primeira Esquerda</string>
    <string name="second_left">Segunda Esquerda</string>
    <string name="second_right">Segundo Direita</string>
    <string name="first_right">Primeira Direita</string>
</resources>
