<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.signup.fragments.personaldata.PersonalDataFragment">

    <EditText
        android:id="@+id/personalDataNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_margin="12dp"/>

    <EditText
        android:id="@+id/personalDataLastNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:layout_margin="12dp"/>

    <EditText
        android:id="@+id/personalDataAgeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:inputType="number"
        android:maxLength="2"
        android:layout_margin="12dp"/>

    <Button
        android:id="@+id/personalButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/next"
        android:layout_margin="12dp"
        android:background="@drawable/radius_btn"
        android:textColor="@android:color/white"/>

</LinearLayout>